--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "release:posix": "npm run build:backend:posix && npm run build:frontend:posix",
     "release:win": "npm run build:backend:win && npm run build:frontend:win",
     "start": "cross-env ENABLE_VIRTUAL_SMOOTHIE=true NODE_ENV=development electron app/",
-    "unit-renderer": "karma start test/unit/karma.conf.js --single-run",
-    "unit-main": "karma start test/unit/karma.conf.js --single-run",
-    "integration": "cross-env ENABLE_VIRTUAL_SMOOTHIE=true mocha --timeout 60000 test/integration_test.js",
+    "unit-renderer": "karma start test/renderer/karma.conf.js --single-run",
+    "unit-main": "mocha test/main/",
+    "integration": "cross-env ENABLE_VIRTUAL_SMOOTHIE=true mocha --timeout 60000 test/e2e/integration_test.js",
     "test": "npm run unit; npm run integration; nosetests"
   },
   "devDependencies": {
