--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "electron-builder": "5.22.1",
-    electron-prebuilt": "1.3.1",
+    "electron-prebuilt": "1.3.1",
     "electron-chromedriver": "^1.4.0",
     "eslint": "^3.10.2",
     "eslint-config-standard": "^5.1.0",
