--- a/package.json
+++ b/package.json
@@ -107,11 +107,11 @@
     "sinon": "^1.17.6",
     "socket.io-client": "~1.3.7",
     "underscore.string": "^3.3.4",
-    "vue": "^2.0.1",
-    "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.0",
-    "vuex": "^2.0.0",
-    "vuex-toast": "0.1.0",
+    "vue": "2.0.5",
+    "vue-resource": "1.0.3",
+    "vue-router": "2.0.2",
+    "vuex": "2.0.0",
+    "vuex-toast": "0.0.2",
     "websocket": "^1.0.23"
   }
 }
