--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "socket.io-client": "~1.3.7",
     "underscore.string": "^3.3.4",
     "vue": "2.0.5",
+    "vue-loader": "9.9.3",
     "vue-resource": "1.0.3",
     "vue-router": "2.0.2",
     "vuex": "2.0.0",
